# FairOps

./: .env.example  .gitattributes  .gitignore  AGENT.md  LICENSE  README.md  cloudbuild.yaml  index.html
.github/workflows/: publish-sdk.yml
docs/: LOOKER_STUDIO_GUIDE.md
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
sdk/: README.md  pyproject.toml
sdk/fairops_sdk/: __init__.py  client.py  publisher.py  schemas.py
sdk/tests/: __init__.py  test_schemas.py
services/auditor/: Dockerfile  audit_runner.py  bq_writer.py  main.py  requirements.txt  severity.py  slicing.py  spanner_writer.py
services/explainer/: Dockerfile  compliance_report.py  counterfactuals.py  gemini_narrator.py  main.py  redis_cache.py  requirements.txt  shap_explainer.py
services/gateway/: Dockerfile  main.py  requirements.txt
services/mitigation/: Dockerfile  main.py  requirements.txt  rollback.py  vertex_jobs.py
services/notifier/: Dockerfile  main.py  requirements.txt  slack_sender.py
services/shared/: __init__.py  auth.py  bigquery.py  dlp_wrapper.py  errors.py  logging.py  spanner.py  telemetry.py  tracing.py
services/stream_processor/: dataflow_runner.py  pipeline.py  requirements.txt
terraform/: alerts.tf  dlp.tf  security.tf
tests/: conftest.py
tests/e2e/: test_benchmark_datasets.py  test_full_pipeline.py
tests/load/: locustfile.py
tests/unit/: __init__.py  test_cache.py  test_counterfactuals.py  test_drift.py  test_in_processing.py  test_metrics.py  test_narrative.py  test_post_processing.py  test_rollback.py  test_severity.py  test_shap.py  (+1 more)
(+29 files in other folders)
